<resources>
    <string name="app_name">EasyPay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance_value_1">$ 2,3321.00</string>
    <string name="balance_value_2">$ 2,5435.00</string>
    <string name="balance_value_3">$ 2,4235.00</string>
    <string name="account_name_1">Checking-1342</string>
    <string name="account_name_2">Checking-4456</string>
    <string name="account_name_3">Savings-4568</string>
    <string name="account_name_4">Visa-5632</string>
    <string name="account_type_1">Current Balance</string>
    <string name="account_type_2">Available Balance</string>
    <string name="account_type_3">Super Premium Balance</string>
    <string name="transaction_status_1">Successful</string>
    <string name="transaction_status_2">Pending</string>
    <string name="transaction_status_3">Scheduled</string>
    <string name="date1">02/11/2017</string>
    <string name="date2">18/06/2019</string>
    <string name="date3">22/02/2018</string>
    <string name="creditor1">Dentist</string>
    <string name="creditor2">Gas</string>
    <string name="creditor3">Electricity</string>
    <string name="action_continue">CONTINUE</string>
    <string name="action_cancel">CANCEL</string>


    <string name="full_name">Full name</string>
    <string name="user_age">Age</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">App needs your camera permission in order to scan qr code.</string>
    <string name="scanned_qr_code_result">Scanned Qr Code result</string>

    <string name="successful_operation">Successful operation, Congrats!</string>
    <string name="cca_amount">$ 2,000.00</string>
    <string name="successful_message_cca">Your new balance is $ 6,000.00 </string>


    <string name="first_name">Fullname :</string>
    <string name="age">Age :</string>
    <string name="add_transfer">Transfer</string>
    <string name="add_payment">Payment</string>
    <string name="add_withdrawal">Cardless Cash</string>
    <string name="accounts">Accounts</string>
    <string name="add">Add</string>
    <string name="recent">Recent</string>
</resources>
