<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.AccountDetailActivity">
    <TextView
            android:id="@+id/details_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_name_1"
            android:gravity="center"/>
    <TextView
            android:id="@+id/details_account_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance_value_1"
            android:gravity="center"/>
    <TextView
            android:id="@+id/details_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_type_3"
            android:gravity="center"/>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/transaction_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7535AD"
            tools:listitem="@layout/item_transaction">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>