<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_item_list"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        cardview:cardCornerRadius="15dp">
    <RelativeLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/transaction_creditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/creditor3"/>
        <TextView
                android:id="@+id/transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction_creditor"
                android:layout_alignLeft="@+id/transaction_creditor"
                android:layout_alignStart="@+id/transaction_creditor"
                android:text="@string/date2"/>

        <TextView
                android:id="@+id/transaction_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="50dp"
                android:textSize="16sp"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/balance_value_3"/>
        <TextView
                android:id="@+id/transaction_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction_amount"
                android:layout_alignLeft="@+id/transaction_amount"
                android:layout_alignStart="@+id/transaction_amount"
                android:text="@string/transaction_status_2"
                />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>