<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:id="@+id/item_account"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#8A000000"
        cardview:cardCornerRadius="4dp">
    <RelativeLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/account_name_3"/>
        <TextView
                android:id="@+id/account_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_name"
                android:layout_alignLeft="@+id/account_name"
                android:layout_alignStart="@+id/account_name"
                android:text="@string/balance_value_3"/>
        <TextView
                android:id="@+id/account_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_balance"
                android:layout_alignLeft="@+id/account_balance"
                android:layout_alignStart="@+id/account_balance"
                android:text="@string/account_type_3"/>
        <ImageView
                android:id="@+id/image_arrow"
                android:src="@drawable/baseline_last_page_black_18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>