<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        tools:context=".ui.fargments.AddTransactionFragment">

    <androidx.cardview.widget.CardView
            android:id="@+id/transaction_add"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:src="@drawable/icon_money_transfer_100"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/add_transfer"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/transaction_payment"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

        <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:src="@drawable/icon_wallet_100"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/add_payment"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/transaction_cardlesscash"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

        <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:src="@drawable/icon_withdrawal_limit_100"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/add_withdrawal"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>